chore: Use new rule-engine [DHIS2-16255]